#67 Added max width to parent antd container, fixed related layout bugs

--- a/src/components/Card/QuizCard/QuizCard.scss
+++ b/src/components/Card/QuizCard/QuizCard.scss
@@ -20,8 +20,8 @@
     padding-top: 10px;
     width: 15vw;
     height: 12vw;
-    max-width: 350px;
-    max-height: 320px;
+    max-width: 240px;
+    max-height: 210px;
     min-width: 190px;
     min-height: 160px;
     object-fit: cover;
